# that-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  OPERATORS.md  README.md  SECURITY.md  SUPPORT.md  build.sh  release-notes-v0.1.0.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml
crates/that-channels/: Cargo.toml
crates/that-channels/src/: channel.rs  config.rs  factory.rs  inbound.rs  lib.rs  router.rs  tool.rs
crates/that-channels/src/adapters/: http.rs  mod.rs  telegram.rs
crates/that-cli/: Cargo.toml
crates/that-cli/src/: cli.rs  main.rs
crates/that-cli/src/commands/: eval.rs  mod.rs  secrets.rs
crates/that-core/: Cargo.toml
crates/that-core/src/: default_skills.rs  hooks.rs  lib.rs  model_catalog.rs  observability.rs  orchestration.rs  tui.rs
crates/that-eval/: Cargo.toml
crates/that-eval/src/: main.rs
crates/that-git-server/src/: api.rs  git.rs  hooks.rs  main.rs  state.rs
crates/that-git-server/tests/: integration.rs
crates/that-plugins/: Cargo.toml
crates/that-plugins/src/: cluster.rs  deploy.rs  lib.rs
crates/that-sandbox/: Cargo.toml
crates/that-sandbox/src/: backend.rs  docker.rs  kubernetes.rs  lib.rs
crates/that-tools/: Cargo.toml  benchmarks.rs
crates/that-tools/skills/: install.md
crates/that-tools/src/: lib.rs
deploy/helm/that-agent/: Chart.yaml  values.yaml
deploy/k8s/: README.md
deploy/k8s/base/: buildkit-deployment.yaml  (+15 more)
docs/: self-knowledge-map.md
evals/scenarios/: autonomous_task_chaining.toml  git_iteration.toml  harness_capability_self_awareness.toml  heartbeat_task_lifecycle.toml  implicit_project_memory_continuity.toml  long_memory_corpus.toml  memory_compaction.toml  memory_index_pointer.toml  memory_persistence.toml  plugin_lifecycle_cross_session.toml  plugin_lifecycle_holistic_judge.toml  plugin_reuse_update_cross_turn.toml  progressive_learning.toml  skill_discovery.toml  temporal_recall.toml  workspace_bootstrap_identity.toml
sandbox/: Dockerfile  build.sh
scripts/: build-and-push.sh  install.sh  measure.sh  phoenix-trace-raw.sh
(+107 files in other folders)
