[package]
name = "that-channels"
description = "Multi-channel routing and adapters for agent communication"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait support
async-trait = "0.1"

# HTTP client for external APIs (Telegram)
reqwest = { version = "0.12", features = ["json"] }

# Async futures utilities
futures = "0.3"

# HTTP gateway adapter
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
dashmap = "6"
uuid = { workspace = true }
